mail/themes/windows/mail/compose/messengercompose.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/* ===== messengercompose.css ===========================================
  == Styles for the main Messenger Compose window.
  ======================================================================= */

@import url("chrome://messenger/skin/");
@import url("chrome://messenger/skin/shared/messengercompose.css");

@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

#attachmentBucket {
  -moz-appearance: none;
  border-top: 1px solid #a9b7c9; /* The same color as the splitters */
  border-inline-start: 1px solid #a9b7c9;
  border-bottom: 1px solid #a9b7c9;
  background-color: -moz-Field;
  color: -moz-FieldText;
}

#attachments-box[empty] > #attachmentBucket:focus {
  box-shadow: 0 0 1px Highlight inset, 0 0 1px Highlight inset;
}

@media (-moz-windows-default-theme: 0) {
  #attachmentBucket attachmentitem {
    border-top: 1px solid transparent;
  }

  #attachmentBucket attachmentitem:last-child {
    border-bottom: 1px solid transparent;
  }
}

#attachmentBucket attachmentitem[dropOn="top"] {
  border-top-color: Highlight;
}

#attachmentBucket attachmentitem[dropOn="bottom"] {
  border-bottom-color: Highlight;
}

/* ::::: special toolbar colors ::::: */

#composeContentBox {
  -moz-appearance: none;
  color: -moz-dialogtext;
  background-color: -moz-Dialog;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4) inset;
  border-top-width: 0;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) inset;
}

#composeContentBox:-moz-window-inactive {
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05) inset;
}

#headers-box {
  -moz-appearance: none;
  padding-bottom: 2px;
  border-bottom: 1px solid ThreeDShadow;
}

#MsgHeadersToolbar {
  color: -moz-DialogText;
  text-shadow: none;
}

#msgheaderstoolbar-box {
  padding-bottom: 2px;
}

#addresses-box {
  padding-top: 4px;
}

#msgIdentity {
  -moz-appearance: none;
  background-color: transparent;
  height: 22px;
  line-height: 1;
  border: 1px solid transparent;
  box-shadow: none;
  margin-inline-end: 5px;
  padding-inline-start: 3px !important;
  background-image: none;
  transition: border .2s, background-color .2s;
}

@media (-moz-windows-default-theme: 0) {
  #msgIdentity {
    border-bottom-color: ThreeDShadow;
  }

  #msgIdentity:hover,
  #msgIdentity:focus,
  #msgIdentity[focused="true"] {
    background-color: -moz-field;
    border-color: ThreeDShadow;
  }
}

#msgSubject {
  -moz-appearance: none;
  margin-top: 0;
  margin-inline-end: 5px;
  background-color: inherit;
  border: 1px solid transparent;
  padding: 2px;
  padding-inline-start: 5px;
  transition: border .2s, background-color .2s;
}

@media (-moz-windows-default-theme) {
  #msgSubject {
    border-bottom-color: #a9b7c9;
  }

  #msgSubject:hover,
  #msgSubject[focused="true"] {
    background-color: -moz-field;
    border-color: #a9b7c9;
  }
}

@media (-moz-windows-default-theme: 0) {
  #msgSubject {
    border-bottom-color: ThreeDShadow;
  }

  #msgSubject:hover,
  #msgSubject[focused="true"] {
    background-color: -moz-field;
    border-color: ThreeDShadow;
  }
}

/* ::::: addressing widget ::::: */

#addressingWidget {
  -moz-user-focus: none;
  -moz-appearance: none;
  width: 0;
  border: none;
  background-color: transparent;
  margin-top: 1px;
  margin-bottom: 0;
  padding-inline-end: 1px;
}

#addressingWidget > .addressingWidgetItem,
#addressingWidget > .dummy-row {
  border-style: none;
  background: none;
  color: inherit;
  box-shadow: none;
}

#addressingWidget > .addressingWidgetItem {
  padding-top: 0;
  padding-bottom: 2px;
}

textbox.textbox-addressingWidget,
.dummy-row-cell:not(:first-child) {
  margin-bottom: 2px !important;
  padding: 2px !important;
  padding-inline-start: 5px !important;
  border: 1px solid transparent !important;
  transition: border .2s, background-color .2s;
}

@media (-moz-windows-default-theme: 0) {
  textbox.textbox-addressingWidget,
  .dummy-row-cell:not(:first-child) {
    border-bottom-color: ThreeDShadow !important;
    margin-inline-end: 1px !important;
  }

  textbox.textbox-addressingWidget:hover,
  textbox.textbox-addressingWidget[focused="true"] {
    background-color: -moz-field;
    border-color: ThreeDShadow !important;
  }
}

.addressingWidgetCell:first-child,
.dummy-row-cell:first-child {
  border-bottom-color: transparent;
}

.deleteAddress {
  -moz-box-ordinal-group: 0;
  cursor: default;
  margin-inline-end: 0;
  margin-bottom: 1px;
  width: 0;
  height: 18px;
  transition-property: width, margin-inline-end;
  transition-duration: 50ms, 50ms;
  transition-timing-function: ease-in-out, ease-in-out;
}

.addressingWidgetCell:hover > .aw-menulist:not([open="true"]) + .deleteAddress {
  margin-inline-end: 3px;
  width: 18px;
}

.aw-menulist {
  -moz-appearance: none;
  -moz-box-align: center;
  -moz-box-pack: center;
  color: ButtonText;
}

.aw-menulist:-moz-focusring:not([open="true"]) > .menulist-label-box {
  border: 1px dotted;
}

.aw-menulist > .menulist-label-box {
  margin: 0;
}

.aw-menulist > .menulist-dropmarker {
  display: none;
}

/* ::::: format toolbar ::::: */

#FormatToolbox {
  -moz-appearance: none;
}

#FontFaceSelect {
  max-width: 35ch;
}

.formatting-button {
  margin: 1px;
}

toolbarbutton.formatting-button {
  -moz-appearance: none;
  border: 1px solid transparent;
  -moz-context-properties: fill;
  fill: currentColor;
  transition-property: background-color, border-color, box-shadow;
  transition-duration: 150ms;
}

@media (-moz-os-version: windows-win7) {
  toolbarbutton.formatting-button {
    border-radius: 2px;
  }
}

toolbarbutton.formatting-button:not([disabled="true"]):hover {
  background: var(--toolbarbutton-hover-background);
  border-color: var(--toolbarbutton-hover-bordercolor);
  box-shadow: var(--toolbarbutton-hover-boxshadow);
}
/* ... */

